add payments for transaction
