# openapi/path/payments.yaml
@@ -59,6 +59,67 @@
             text/plain:
               schema:
                 type: string
+  /payment_list/for_transaction:
+    get:
+      operationId: getPaymentListForTransaction
+      summary: Get a list of maximum 5 realtime data payment operations associated with the given transaction depending on the pagination parameters 'cursor, 'order' and 'limit'.
+      description: Returns a list of realtime data payment operations associated with the given transaction. It can only load a maximum of 5 payments at a time.
+      parameters:
+        - name: hash
+          in: query
+          schema:
+            type: string
+          required: true
+          description: Id/Hash of the transaction.
+        - name: include_failed
+          in: query
+          schema:
+            type: string
+          required: false
+          description: Must be set to true if the result should also include failed payments.
+        - name: network
+          in: query
+          schema:
+            type: string
+          required: true
+          description: Stellar Network to be used. Can be 'public', 'testnet' or 'futurenet'. Use 'public' as default. Allow the user to specify the network.
+        - name: cursor
+          in: query
+          schema:
+            type: string
+          required: false
+          description: The cursor value for use in pagination. A number that points to a specific location in a collection of responses and is pulled from the paging_token value of a record.
+        - name: order
+          in: query
+          schema:
+            type: string
+          required: true
+          description: A designation of the order in which records should appear. Options include 'asc' (for ascending) or 'desc' (for descending). If this argument isn't set, it defaults to asc.
+        - name: limit
+          in: query
+          schema:
+            type: integer
+          required: true
+          description: The number of records to be returned. Currently maximum 5. If the user asks for more please let him know that you can only load maximum 5 at a time.
+      responses:
+        "200":
+          description: A complex object array response holding a list of payment operations for the transaction.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaymentsResponse'
+        "400":
+          description: Paging limit was higher than allowed.
+          content:
+            text/plain:
+              schema:
+                type: string
+        "404":
+          description: Transaction was not found on the Stellar Network.
+          content:
+            text/plain:
+              schema:
+                type: string
   /payment/details:
     get:
       operationId: getPaymentDetails
